# OCRoj

./: .gitignore  Makefile  README.md  ocr.glade  ocroj.c  pwn  saved_RDN_LBIW.txt  segmented_image
POST/: README
RDN/: .~lock.izitrain.odt#  .~lock.training.odt#  CMakeLists.txt  Makefile  RDN_main.c  RDN_main_2.c  RDN_main_bias.c  RDN_main_bias_2  RDN_main_bias_2.c  RDN_main_bias_2.d  Sans nom 1.odt  a.out  izitrain.odt  network.h  neuron.h  neuron_2.h  neuron_bias.h  neuron_bias_2.h  saved_RDN_LBIW.txt  training.odt
RDN/Creation/: .RDN_main_2.c.swp  .lecture.c.swp  .neuron.h.swp  Makefile  RDN_main  RDN_main.c  RDN_main.h  RDN_main_2  RDN_main_2.c  RDN_main_2.d  RDN_main_2.h  RDN_main_3.c  RDN_main_3.h  RDN_main_bias_2.c  RDN_main_l  RDN_main_l.c  RDN_main_l.h  a.out  inputs_RDN.txt  inputs_RDN_2.txt  lecture  lecture.c  lecture.d  lecture.h  network.c  network.h  neuron.h  neuron_2.h  neuron_bias.h  neuron_bias_2.h  outputs_RDN.txt  saved_RDN_LBIW.txt  saved_RDN_LBIW_test.txt  temp.txt  training  training.txt  training_2  training_2.txt  training_94  training_old.txt
RDN/Lecture/: Makefile  inputs_RDN.txt  lecture  lecture.c  lecture.h  outputs_RDN.txt
RDN/RDN_Thomas/: a.out  réseau_neurones.c
RDN/Training/: algo  creator.c
RDN/network/: layer.h  network_l.h  neuron.h  neuron_l.h
RDN/old/: RDN_main.c  RDN_main.h  network.h
SEG/: README  cutcutcut.c  cutcutcut.h  go  intomatrices.c  intomatrices.h  mainseg.c
TDI/: #ocr.glade#  Makefile  __mainSDL.c  black_and_white.c  black_and_white.h  black_on_white.c  decoupage.h  grey_level.c  grey_level.h  main  (+14 more)
(+16 files in other folders)
